Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-141648

Few WebChannel object registration crashes

XMLWordPrintable

    • d98fbfd9e (dev), 878b8350b (6.10), fdc487983 (tqtc/lts-6.8)

      Passing null or an object of non-QML origin to registeredObjects causes it to crash in QQmlWebChannel::registeredObjects_append() when it tries to get QQmlContext for the object, but gets null.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            msarehn Arno Rehn
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: